# mkdocs_demo

./: README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-wiki.yml
0.0.1/: gen_ref_pages.py  objects.inv
0.0.1/reference/SUMMARY/: index.html
0.0.1/reference/project/: index.html
0.0.3/: 404.html  index.html
0.0.3/ml_lib_design/: index.html
0.0.3/reference/SUMMARY/: index.html
0.0.3/reference/project/: index.html
0.0.3/reference/project/amet/: index.html
0.0.3/reference/project/dolor/: index.html
docs/: index.md  ml_lib_design.md
latest/ml_lib_design/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/project/: index.html
latest/reference/project/amet/: index.html
latest/reference/project/dolor/: index.html
site/: 404.html  index.html
site/reference/project/amet/: index.html
site/reference/project/dolor/: index.html
site/search/: search_index.json
src/project/: __init__.py  amet.py  dolor.py
