[tool.poetry]
name = "mkdocs-demo"
version = "0.0.3"
description = ""
authors = ["Aritra Biswas <pandalearnstocode@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.6"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.4"
tomli = "^2.0.1"
toml-cli = "^0.3.1"
mike = "^1.1.2"
mkdocs-enumerate-headings-plugin = "^0.5.0"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
